apps/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-write-test
  labels:
    app: file-write-test
spec:
  selector:
    matchLabels:
      app: file-write-test
  replicas: 1
  template:
    metadata:
      labels:
        app: file-write-test
    spec:
      imagePullSecrets:
        - name: andrewkreuzer-dockerhub-secret
      containers:
      - name: file-write-test
        image: andrewkreuzer/personal:pvc-write-test
        imagePullPolicy: IfNotPresent
        args:
          - --all
          - --dir
          - /data
          - --interval
          - 5s
        resources:
          requests:
            cpu: 100m
            memory: 1Gi
          limits:
            cpu: 100m
            memory: 1Gi
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: file-test-pvc
      restartPolicy: Always
