apps/statefulset.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: file-write-test
  labels:
    app: file-write-test
spec:
  clusterIP: None
  selector:
    app: file-write-test
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: file-write-test
  labels:
    app: file-write-test
spec:
  serviceName: file-write-test
  selector:
    matchLabels:
      app: file-write-test
  replicas: 3
  template:
    metadata:
      labels:
        app: file-write-test
      annotations:
        k8s.grafana.com/job: "pvc-test"
        k8s.grafana.com/scrape: "true"
        k8s.grafana.com/metrics.portName: "metrics"
    spec:
      imagePullSecrets:
        - name: andrewkreuzer-dockerhub-secret
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: file-write-test
      containers:
      - name: file-write-test
        image: andrewkreuzer/personal:pvc-write-test
        imagePullPolicy: Always
        args:
          - --all
          - --dir
          - /data
          - --interval
          - 5s
        ports:
        - name: metrics
          containerPort: 2112
        resources:
          requests:
            cpu: 100m
            memory: 1Gi
          limits:
            cpu: 100m
            memory: 1Gi
        volumeMounts:
        - name: data
          mountPath: /data
      restartPolicy: Always
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: ceph-block
      resources:
        requests:
          storage: 10Gi
