apps/persephone-server.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: persephone
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: persephone
  namespace: persephone
  labels:
    app.kubernetes.io/name: persephone
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: persephone
  replicas: 1
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container:  persephone
      labels:
        app.kubernetes.io/name: persephone
        app.kubernetes.io/part-of: persephone
    spec:
      securityContext:
        fsGroup: 10001
      imagePullSecrets:
        - name: andrewkreuzer-dockerhub-secret
      containers:
      - name: persephone
        image: andrewkreuzer/personal:persephone-server@sha256:6175fedd7eb5b70d073c6b4c6baf6404a0a3bacff2bc7589695d7a65b079fe98
        imagePullPolicy: IfNotPresent
        securityContext:
          runAsUser: 10001
          runAsGroup: 10001
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            memory: 100Mi
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /readyz
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: persephone-db-storage
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: persephone
  namespace: persephone
spec:
  selector:
    app.kubernetes.io/name: persephone
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: persephone
  namespace: persephone
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - persephone
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: persephone
            port:
              name: http
---
